add route admin, teacher

--- a/src/features/Student/StudentPage/DashBoard.scss
+++ b/src/features/Student/StudentPage/DashBoard.scss
@@ -55,6 +55,7 @@
       button {
         background: #403558;
         color: #ffffff;
+        text-transform: capitalize;
         &:hover {
           background: #35383f;
           //   transition: 0.3s ease-in-out;
