--- a/src/features/Student/StudentProfile/UserProfile.scss
+++ b/src/features/Student/StudentProfile/UserProfile.scss
@@ -1,15 +1,21 @@
 .contentInfo {
-  width: 80%;
+  width: 90%;
   height: 90%;
 
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-
   gap: 10px;
+
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
   //IMG for user
   .imgUser {
+    margin-top: 30px;
     flex: 1;
+
+    display: flex;
+    justify-content: center;
     .img {
       width: 250px;
       height: 250px;
@@ -17,8 +23,8 @@
   }
   //Info for user
   .infoUser {
+    margin-top: 50px;
     flex: 2;
-    margin-top: 30px;
 
     display: flex;
     flex-direction: column;
