--- a/src/style/CourseDetail.scss
+++ b/src/style/CourseDetail.scss
@@ -1,7 +1,9 @@
 //Main links
 .contentDetails {
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  // min-height: 95%;
+  min-height: 80%;
+  height: fit-content;
 
   display: flex;
   flex-direction: column;
@@ -10,7 +12,7 @@
 
   &_link {
     width: 60%;
-    height: 8%;
+    // height: 8%;
 
     display: flex;
     flex-direction: row;
@@ -27,14 +29,14 @@
 
   &_content {
     width: 95%;
-    height: 80%;
+    // height: 80%;
   }
 }
 
 //For detail page
 .details {
   width: 100%;
-  height: 90%;
+  // height: 90%;
 
   display: flex;
   flex-direction: column;
