add route classes for students

--- a/src/components/MainPage/Header/Header.scss
+++ b/src/components/MainPage/Header/Header.scss
@@ -14,11 +14,12 @@
   color: rgb(0, 0, 0);
   background: #fff;
 
-  position: sticky;
-  top: 0;
-  right: 0;
+  // position: sticky;
+  // top: 0;
+  // right: 0;
 
   box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+
   &_logo {
     flex: 3;
 
