--- a/src/features/App/App.scss
+++ b/src/features/App/App.scss
@@ -1,20 +1,26 @@
-.content {
-  width: 100vw;
-  min-height: 600px;
-  height: 92vh;
-
-  background: #f4f4f4;
-
+.app {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  gap: 25px;
 
-  color: rgb(0, 0, 0);
+  .content {
+    width: 100vw;
+    min-height: 600px;
+    height: 85vh;
 
-  .loading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    background: #f4f4f4;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: rgb(0, 0, 0);
+
+    .loading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
