--- a/src/style/CourseDetail.scss
+++ b/src/style/CourseDetail.scss
@@ -1,23 +1,22 @@
 //Main links
 .contentDetails {
+  margin-top: 50px;
+
   width: 100%;
-  // min-height: 95%;
-  min-height: 80%;
-  height: fit-content;
+  min-height: 90%;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+
   gap: 50px;
 
   &_link {
     width: 60%;
-    // height: 8%;
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
     a {
       color: black;
       font-size: 18px;
@@ -36,13 +35,11 @@
 //For detail page
 .details {
   width: 100%;
-  // height: 90%;
 
   display: flex;
   flex-direction: column;
-  // justify-content: center;
   align-items: center;
-  gap: 20px;
+  // gap: 20px;
 
   &_tilte {
     width: 90%;
