--- a/src/style/CourseDetail.scss
+++ b/src/style/CourseDetail.scss
@@ -39,7 +39,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // gap: 20px;
+  gap: 20px;
 
   &_tilte {
     width: 90%;
@@ -48,6 +48,19 @@
 
   &_class {
     width: 95%;
+
+    ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+
+      gap: 10px;
+      flex-wrap: wrap;
+      li {
+        width: 45%;
+        font-size: 17px;
+      }
+    }
   }
   &_table {
     width: 90% !important;
