--- a/src/style/CourseDetail.scss
+++ b/src/style/CourseDetail.scss
@@ -1,18 +1,17 @@
 //Main links
 .contentDetails {
-  margin-top: 50px;
-
   width: 100%;
-  min-height: 90%;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  gap: 50px;
+  gap: 30px;
 
   &_link {
     width: 60%;
+    min-height: 40px;
 
     display: flex;
     flex-direction: row;
@@ -64,7 +63,6 @@
   }
   &_table {
     width: 90% !important;
-
     text-align: center;
 
     button {
