--- a/src/style/CourseDetail.scss
+++ b/src/style/CourseDetail.scss
@@ -48,6 +48,9 @@
   &_class {
     width: 95%;
 
+    display: flex;
+    flex-direction: column;
+
     ul {
       display: flex;
       flex-direction: row;
@@ -76,6 +79,29 @@
       .icons {
         font-size: 25px;
         color: green;
+      }
+    }
+
+    //scored herre
+    .scoredGrade {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      .scores {
+        flex: 1;
+
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        &_name {
+          font-weight: 600;
+        }
+        &_value {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          gap: 5px;
+        }
       }
     }
   }
