--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,8 @@
 
   button,
   select,
-  input {
+  input,
+  textarea {
     border-radius: 4px !important;
     &:focus {
       box-shadow: none !important;
