--- a/src/style/CourseDetail.scss
+++ b/src/style/CourseDetail.scss
@@ -16,12 +16,19 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     a {
       color: black;
       font-size: 18px;
     }
     .active {
       border-bottom: 1px solid #000;
+    }
+
+    .icon {
+      cursor: pointer;
+      font-size: 20px;
+      line-height: 40px;
     }
   }
 
@@ -59,7 +66,7 @@
       gap: 10px;
       flex-wrap: wrap;
       li {
-        width: 45%;
+        width: 30%;
         font-size: 17px;
       }
     }
