--- a/src/style/Courses.scss
+++ b/src/style/Courses.scss
@@ -6,9 +6,33 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 40px;
+
+  .menuSearch {
+    width: 75%;
+    min-height: 20%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    &_items {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      &_label {
+        flex: 1;
+      }
+      &_control {
+        flex: 2;
+      }
+      &_select {
+        flex: 1;
+      }
+    }
+  }
   .menuCourses {
     width: 80%;
-    height: 80%;
+    min-height: 70%;
 
     display: flex;
     flex-direction: row;
@@ -19,7 +43,7 @@
     gap: 10px;
     .course {
       width: 24%;
-      height: 24%;
+      height: 30%;
       border-radius: 10px;
 
       // background: rgb(201, 190, 221);
