--- a/src/style/CourseDetail.scss
+++ b/src/style/CourseDetail.scss
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   gap: 30px;
 
   &_link {
@@ -45,6 +44,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   gap: 20px;
 
   &_tilte {
@@ -53,15 +53,16 @@
   }
 
   &_class {
-    width: 95%;
+    width: 80%;
 
     display: flex;
     flex-direction: column;
 
+    //info class
     ul {
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: flex-start;
 
       gap: 10px;
       flex-wrap: wrap;
@@ -69,6 +70,13 @@
         width: 30%;
         font-size: 17px;
       }
+    }
+    //buttons
+    .handleBtn {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 20px;
     }
   }
   &_table {
