--- a/src/style/ReviewsDetail.scss
+++ b/src/style/ReviewsDetail.scss
@@ -21,33 +21,78 @@
   &_table {
     tbody {
       tr {
-        .reviews {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-
-          gap: 5px;
-          .review {
-            width: 90%;
-
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start;
-            gap: 10px;
-
-            .name {
-              font-weight: 500;
-            }
-            .time {
-              font-size: 14px;
-              line-height: 25px;
-            }
-            .content {
-              word-break: break-all;
-            }
-          }
+        .detailReview {
+          cursor: pointer;
         }
+      }
+    }
+  }
+}
+
+//table details
+
+.detailReviews {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+
+  &_header {
+    width: 80%;
+    font-size: 18px;
+
+    cursor: pointer;
+    .icons {
+      font-size: 24px;
+      margin-right: 5px;
+    }
+  }
+  &_content {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .titleReview {
+      width: 100%;
+      text-align: center;
+
+      font-size: 20px;
+    }
+    .titleContent {
+      width: 80%;
+
+      display: flex;
+      flex-direction: column;
+
+      gap: 10px;
+
+      .review {
+        width: 100%;
+
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+
+        padding-bottom: 10px;
+        border-bottom: 1px solid rgb(209, 209, 209);
+        &_name {
+          flex: 1;
+          // font-weight: 500;
+        }
+        &_message {
+          flex: 2;
+          word-break: break-all;
+        }
+        // &_time {
+        //   flex: 1;
+
+        //   font-size: 14px;
+        //   font-style: italic;
+        // }
       }
     }
   }
