--- a/src/style/FormInput.scss
+++ b/src/style/FormInput.scss
@@ -5,7 +5,13 @@
   &_group {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-end;
     gap: 10px;
+    &_label {
+      flex: 1;
+    }
+    &_control {
+      flex: 3;
+    }
   }
 }
