--- a/src/features/Student/StudentProfile/UserProfile.scss
+++ b/src/features/Student/StudentProfile/UserProfile.scss
@@ -22,6 +22,10 @@
     .img {
       width: 250px;
       height: 250px;
+
+      background-image: url(../../../assets/icons/user.png);
+      background-size: 250px 250px;
+      background-repeat: no-repeat;
     }
   }
   //Info for user
